# projects

./: README.md
Pokemans/: .gitignore  CHANGELOG.md  Pokemans.cabal  pokemonLog.txt
Pokemans/app/: CallPokemon.hs  LoadPokemon.hs  Main.hs  Models.hs  PokemonDatabase.hs  PokemonLogger.hs
Pokemans/dist-newstyle/cache/: compiler  config  elaborated-plan  elaborated-plan595674-2.tmp  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Pokemans/dist-newstyle/tmp/environment.-1255372/: .ghc.environment.x86_64-linux-8.10.7
Pokemans/dist-newstyle/tmp/environment.-68660/: .ghc.environment.x86_64-linux-8.10.7
lazy_json_validator/: sample_json.json  sample_schema.json  setup.py
lazy_json_validator/lazy_json_validator/: __init__.py  aux.py  json_types.py  parsers.py  validation_errors.py  validators.py
lazy_json_validator/tests/: __init__.py
lazy_json_validator/tests/integrations/: test_sample_schemas.py
lazy_json_validator/tests/units/: test_validators.py
lazy_json_validator/to_lazy_json_validator.egg-info/: PKG-INFO  SOURCES.txt
