cabal-version:      2.4
name:               Pokemans
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             trevorcoconnor@gmail.com
maintainer:         trevorcoconnor@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Pokemans
    main-is:          Main.hs
    ghc-options: -threaded

    Modules included in this executable, other than Main.
    other-modules:
        CallPokemon
        LoadPokemon
        Models
        PokemonDatabase

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        vector,
        aeson,
        request,
        bytestring,
        text,
        tuple,
        casing,
        containers,
        random,
        binary,
        filepath,
        directory,
        monad-parallel,
        safe,
        transformers

    hs-source-dirs:   app
    default-language: Haskell2010
